--- a/apps/portfolio/project.json
+++ b/apps/portfolio/project.json
@@ -58,10 +58,14 @@
           "buildTarget": "portfolio:build:production"
         },
         "development": {
-          "buildTarget": "portfolio:build:development"
+          "buildTarget": "portfolio:build:development",
+          "proxyConfig": "apps/portfolio/proxy.conf.json"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/portfolio/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
